force-app/main/default/objects/df_160_gtepagt_pension_ordninger_p2__c/df_160_gtepagt_pension_ordninger_p2__c.object-meta.xml
<CustomObject>
    <label>Pensionsordninger for Person 2</label>
    <nameField>
        <label>Pensionsordninger for Person 2 Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Pensionsordninger for Person 2s</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>