force-app/main/default/objects/df_160_gtepagt_pension_ordninger_p2__c/fields/gtepagt_pension_institut_p2__c.field-meta.xml
<CustomField>
    <fullName>gtepagt_pension_institut_p2__c</fullName>
    <label>Hvor er pensions- eller forsikri a8f96</label>
    <length>255</length>
    <type>Text</type>
</CustomField>