force-app/main/default/objects/df_160_gtepagt_pension_ordninger_p2__c/fields/journal_dk_new__c.field-meta.xml
<CustomField>
    <fullName>journal_dk_new__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>journal_dk_new</label>
    <referenceTo>df_journal_dk_new__c</referenceTo>
    <relationshipLabel>Pensionsordninger for Person 2</relationshipLabel>
    <relationshipName>df_160_gtepagt_pension_ordninger_p2</relationshipName>
    <type>Lookup</type>
</CustomField>